<resources>
    <string name="app_name">plantshub</string>
    <string name="app_index_img">whiteflower</string>
    <string name="app_defValue"></string>
    <!--  Login  -->
    <string name="app_login_account_editText_hint">请输入账号</string>
    <string name="app_login_password_editText_hint">请输入密码</string>
    <string name="app_login_submit_button_text">登录</string>
    <string name="app_login_register_hint">还没有账号？点击注册</string>
    <!--  textInputLayout_error  -->
    <string name="app_account_textInputLayout_error">请输入账户名，长度在 4 到 12 个数字或者字母</string>
    <string name="app_password_textInputLayout_error">请输入密码，长度在 4 到 12 个数字或者字母</string>
    <string name="app_pwdcheck_textInputLayout_error">输入的密码与第一次不一致</string>
    <string name="app_phone_textInputLayout_error">请填写正确的手机号码</string>
    <string name="app_nickname_textInputLayout_error">请输入昵称，长度在 2 到 12 的数字、字母或者汉字</string>
    <!--  Regex  -->
    <string name="app_accountRegex">[a-zA-Z0-9]{4,12}</string>
    <string name="app_passwordRegex">[a-zA-Z0-9]{4,12}</string>
    <string name="app_phoneRegex">[1]([3-9])[0-9]{9}</string>
    <string name="app_nicknameRegex">[A-Za-z0-9\u4e00-\u9fa5]{2,12}</string>
    <!--  Register  -->
    <string name="app_login_tourists_text">游客登陆</string>
    <string name="app_register_submit_button">注册</string>
    <string name="app_register_nickname_editText_hint">请输入昵称</string>
    <string name="app_register_account_editText_hint">请输入用户名</string>
    <string name="app_register_password_editText_hint">请输入密码</string>
    <string name="app_register_pwdcheck_editText_hint">请再次输入密码</string>
    <string name="app_register_phone_editText_hint">请输入手机号码</string>
    <string name="camera_imageView_contentDescription">相机视图</string>
    <string name="app_camera_upload_button_text">识别</string>
    <string name="app_camera_cancel_button_text">取消</string>
    <string name="app_home_searchEditText_hint">搜索</string>
    <string name="app_home_search_button_contentDescription">默认搜索植物,输入#位置/植物限定范围</string>
    <string name="app_home_navbar_imageView_contentDsecription">导航背景</string>
    <string name="app_camera_capture">拍照按钮</string>
    <string name="home_study_button_contentDescription">学习按钮</string>
    <string name="app_home_index_button_contentDescription">首页按钮</string>
    <string name="app_home_user_button_contentDescription">用户按钮</string>
    <string name="app_user_not_logged_login_button_text">前往登录解锁更多功能！</string>
    <string name="app_user_logged_message">消息</string>
    <string name="app_user_logged_favorite">收藏</string>
    <string name="app_user_logged_setup">清理缓存</string>
    <string name="app_user_logged_logout_button_text">退出登录</string>
    <string name="app_back_button">返回</string>
    <string name="app_user_logged_avatar" >图片</string>
    <string name="app_user_message_button_text">回复</string>
    <string name="app_overview_goto_button">进入</string>
    <string name="app_v26_senderdialog_hint">请输入250字以内的内容</string>
    <string name="app_v26_senderdialog_button">发送</string>
    <string name="app_add_button_text">添加</string>
</resources>
