<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.xiehaibin.plantshub.viewModel.user.UserLoggedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainLight"
        tools:context=".view.fragment.user.UserLoggedFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <ImageButton
            android:id="@+id/user_logged_back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_keyboard_arrow_left_main_24dp"
            android:contentDescription="@string/app_back_button"
            app:layout_constraintBottom_toTopOf="@+id/guideline22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline22" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <ImageView
            android:id="@+id/user_logged_userAvatar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/app_user_logged_avatar"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toTopOf="@+id/guideline24"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/user_logged_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="184dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_logged_userAvatar"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="欢迎您" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="225dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="280dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="335dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="390dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_logged_message"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:paddingTop="8dp"
            android:text="@string/app_user_logged_message"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/user_logged_favorite"
            android:layout_width="321dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:paddingTop="8dp"
            android:text="@string/app_user_logged_favorite"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toBottomOf="@+id/user_logged_message" />

        <TextView
            android:id="@+id/user_logged_setup"
            android:layout_width="321dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:paddingTop="8dp"
            android:text="@string/app_user_logged_setup"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/view4"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <ImageButton
            android:id="@+id/user_logged_message_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_chevron_right_black_24dp"
            android:contentDescription="@string/app_user_logged_message"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageButton
            android:id="@+id/user_logged_favorite_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_chevron_right_black_24dp"
            android:contentDescription="@string/app_user_logged_favorite"
            app:layout_constraintBottom_toTopOf="@+id/view3"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintTop_toBottomOf="@+id/user_logged_message" />

        <ImageButton
            android:id="@+id/user_logged_setup_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_chevron_right_black_24dp"
            android:contentDescription="@string/app_user_logged_setup"
            app:layout_constraintBottom_toTopOf="@+id/view4"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintTop_toBottomOf="@+id/user_logged_favorite" />

        <Button
            android:id="@+id/user_logged_logout_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="32dp"
            android:text="@string/app_user_logged_logout_button_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline23"
            app:layout_constraintStart_toStartOf="@+id/guideline21" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>