<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.xiehaibin.plantshub.viewModel.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainLight">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".view.activity.RegisterActivity">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <ImageView
                android:id="@+id/register_back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_keyboard_arrow_left_main_24dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/register_account_textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorMainLight"
                    android:focusable="auto"
                    android:hint="@string/app_register_password_editText_hint"
                    android:inputType="textPassword"
                    android:text="@={ data.passwordValue }" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_pwdcheck_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/register_password_textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_pwdcheck_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorMainLight"
                    android:hint="@string/app_register_pwdcheck_editText_hint"
                    android:inputType="textPassword"
                    android:text="@={ data.pwdcheckValue }" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_account_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline12">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_account_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorMainLight"
                    android:hint="@string/app_register_account_editText_hint"
                    android:text="@={ data.accountValue }" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_nickname_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/register_pwdcheck_textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_nickname_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorMainLight"
                    android:hint="@string/app_register_nickname_editText_hint"
                    android:text="@={ data.nicknameValue }" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_phone_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/register_nickname_textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_phone_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorMainLight"
                    android:hint="@string/app_register_phone_editText_hint"
                    android:inputType="number"
                    android:text="@={ data.phoneValue }" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_submit_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/primary_button_selector"
                android:onClick="@{ () -> data.clickRegisterSubmitButton() }"
                android:text="@string/app_register_submit_button"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/register_phone_textInputLayout"
                app:layout_constraintVertical_bias="0.30" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>